# dotfiles

./: .bashrc  .editorconfig  .emscripten  .gitconfig  .gitignore  .gitignore_global  .gitk  .tmux.conf  .zshrc  AGENTS.md  Brewfile  README.md  Taskfile.dist.yml  force-install  install  install.zsh
.claude/skills/: dotfiles.md  nvim.md  task.md
.cursor/rules/: foundry.mdc
.irssi/: config  nickserv.channels
atuin/: config.toml
bash/: bashrc
binutils/: Cargo.toml  local-crates
binutils/config/: .luarc.json  config.lua  config.toml  config.yaml  utils.lua
binutils/crates/: Cargo.toml
binutils/crates/config/: Cargo.toml  build.rs  config_schema.json
binutils/crates/config/src/: lib.rs  types.rs  utils.rs
binutils/crates/global/: Cargo.toml  build.rs
binutils/crates/global/src/: config.rs  latest_bin.rs  lib.rs  test_utils.rs  tmux.rs
binutils/crates/global/src/config/: types.rs
binutils/crates/latest_bin/: Cargo.toml
binutils/crates/latest_bin/src/: lib.rs
binutils/crates/test_utils/src/: lib.rs
binutils/src/: config.rs  lib.rs  tmux.rs
gh/: config.yml
git/: gitconfig  gitconfig.local  gitignore_global
installer/: legacy-installer
jj/: config.toml
karabiner/automatic_backups/: karabiner_20200804.json
mise/: config.toml
mise/tasks/: install
scripts/: build-binutils.zsh  build-rdev-git.zsh  commit_changed_file.sh  handle-older-git.zsh
shells/fish/: config.fish
shells/zsh/: zshrc  zshrc.local
ssh/: rc
starship/: starship.toml
taskfiles/: binutils.yml  brew.yml  dotfiles.yml  mise.yml  nvim.yml  shell.yml  system.yml
tmux/: tmux.conf  tmux.local.conf
utils/: build-binutils.zsh  handle-older-git.zsh  setup-rdev-nvim.zsh
vscode/: settings.json
wezterm/: wezterm.lua
zsh/: zprofile  zshenv  zshrc  zshrc.symlink
zsh/completions/: _cargo
zsh/plugins/: 1password.zsh  atuin.zsh  bat.zsh  brew.zsh  fzf.zsh  starship.zsh  tmux.zsh  unixy_utilities.zsh  zoxide.zsh
zsh/plugins_deferred/: brew.zsh  pyenv.zsh
(+41 files in other folders)
