[workspace]
resolver = "2"
members = ["*crates/*"]

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
insta = { version = "1.41.1", features = ["yaml", "toml"] }
rand = "0.8.5"
regex = "1.11.1"
shellexpand = "3.1.0"
temp-env = "0.3.6"
tempfile = "3.14.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
latest_bin = { path = "../../../malleatus/shared_binutils/latest_bin" }
test_utils = { path = "../../../malleatus/shared_binutils/test_utils" }
fixturify = { path = "../../../malleatus/shared_binutils/fixturify" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
